dark mode for cookie banner, added linkedin profile, fixed twitter profile path

--- a/assets/css/extended/custom-styles.css
+++ b/assets/css/extended/custom-styles.css
@@ -1,8 +1,3 @@
-.iframe-container {
-    height: auto;
-    width: 100%;
-}
-
 #cookie-notice {
     font-size: smaller;
     padding: 0.5rem 1rem;
@@ -12,8 +7,12 @@
     bottom: 0;
     padding: 20px 0;
     width: 100%;
-    background: rgba(70, 70, 70, 1);
-    color: rgba(255, 255, 255, 0.8);
+    background: var(--theme);
+    filter: brightness(0.8);   
+}
+
+.dark #cookie-notice {
+ filter: brightness(1.2); 
 }
 
 #cookie-notice a {
@@ -21,16 +20,8 @@
     display: inline-flex;
     cursor: pointer;
     margin-left: 0.5rem;
+    color: var(--primary);
 }
-
-#cookie-notice-accept {
-    color: rgba(86, 228, 58, 0.5)
-}
-
-#cookie-notice-deny {
-    color: rgba(243, 34, 34, 0.5)
-}
-
 @media (max-width: 767px) {
     #cookie-notice span {
         display: block;
